Hopefully fixed tabs on mobile view

--- a/static/styles.css
+++ b/static/styles.css
@@ -209,7 +209,7 @@ li {
     flex: 0 0 auto;
     border-radius: 5px 5px 0 0;
     padding: 20px 14px;
-    margin-right: 6px;
+    margin-right: 4px;
     text-align: left;
 	background: linear-gradient(to bottom, rgba(59, 61, 76, 0.6), #292c3b);
     color: rgba(255, 255, 255, 0.5);
@@ -217,7 +217,7 @@ li {
 }
 
 .tab svg {
-	margin-right: 8px;
+	margin-right: 6px;
 }
 
 .tab.is-active {
